# test

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: architect.py  base.py  coder.py  debugger.py  decomposer.py  executor.py  planner.py  refactor.py  test_generator.py
backend/app/api/routes/: agents.py  health.py  tasks.py
backend/app/logging_system/: logger.py
backend/app/memory/: store.py
backend/app/models/: schemas.py
backend/app/sandbox/: docker_runner.py
backend/app/tasks/: celery_app.py  worker.py
backend/app/workflow/: engine.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentTimeline.tsx  CodeViewer.tsx  Sidebar.tsx  TaskDetails.tsx  TaskInput.tsx  TerminalPanel.tsx  WorkflowProgress.tsx
frontend/src/hooks/: useTask.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
monitoring/: prometheus.yml
restaurant-pos/: index.html  package-lock.json  package.json
restaurant-pos/src/: App.css  App.tsx  index.css
restaurant-pos/src/components/layout/: Sidebar.tsx
restaurant-pos/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx  textarea.tsx
restaurant-pos/src/pages/: Billing.tsx  Dashboard.tsx  Kitchen.tsx  MenuManagement.tsx  Orders.tsx  Reports.tsx  TableManagement.tsx
restaurant-pos/src/store/: index.ts
restaurant-pos/src/types/: index.ts
