[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
celery = "^5.6.2"
redis = "^7.3.0"
chromadb = "^1.5.5"
langchain = "^1.2.12"
langgraph = "^1.1.2"
langchain-community = "^0.4.1"
docker = "^7.1.0"
pydantic-settings = "^2.13.1"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
python-multipart = "^0.0.22"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
